--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.47.12",
     "@types/node": "^22.10.6",
-    "glob": "^11.0.1",
     "lucide-react": "^0.298.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^6.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -25,7 +23,7 @@
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^9.18.0",
+    "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
